--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -34,7 +34,7 @@ jobs:
           passwd='${{ secrets.PWD }}' 
           open_get_weather='${{ secrets.OPEN_GET_WEATHER }}'
           area='${{ secrets.AREA }}'
-          token='${{ secrets.APPTOKEN }}'
+          appToken='${{ secrets.APPTOKEN }}'
           access='${{ secrets.ACCESS }}'
           uids='${{ secrets.UIDS }}'
-          python3 main.py ${user} ${passwd} ${open_get_weather} ${area} ${token} ${access}
+          python3 main.py ${user} ${passwd} ${open_get_weather} ${area} ${appToken} ${access} ${uids}
